<resources>
    <string name="app_name">设备监控</string>
    <string name="action_settings">Settings</string>
    <string name="tab_wifi">网络</string>
    <string name="tab_moniter">监控</string>
    <string name="tab_options">选项</string>
    <string name="tab_workorder">派工单</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="dowrite">写入</string>
    <string name="makesure_quit_title">关闭提醒</string>
    <string name="makesure_quit_content">确认要退出APP吗?</string>


    <string name="hint_moniter_devices_no_device">无设备</string>

    <!--提示信息-->
    <string name="hint_edittext_none_support_type">无支持的参数类型</string>
    <string name="hint_edittext_require_number">要求输入[数值]类型</string>
    <string name="hint_edittext_require_number_with_key">[%1$s]要求输入[数值]类型</string>
    <string name="hint_edittext_cannot_CastStringToValue">输入内容格式错误</string>
    <string name="hint_writetag_WritePending">Write Pending!</string>
    <string name="hint_writetag_CannotWirte">写请求失败</string>
    <string name="hint_options_configpath_null">检测不到扩展存储</string>
    <string name="hint_config_path_changesuccess_restart">配置路径修改成功，App重启后生效</string>
    <string name="title_options_MaximumFractionDigits">数据小数点设置</string>
    <string name="msg_options_MaximumFractionDigits">保留小数点后几位（0-10）?</string>

    <!--修改参数-->
    <string name="msg_changeparam_success">参数修改成功</string>
    <string name="msg_changeparam_success_with_key">参数修改成功[%1$s]</string>
    <string name="title_changeparam_alert">参数修改提示</string>
    <string name="msg_makesure_enable_control">[%1$s]确认要启用[%2$s]吗？</string>
    <string name="msg_makesure_disable_control">[%1$s]确认要禁用[%2$s]吗？</string>
    <string name="title_editaddress_new_address">修改数据地址[断开设备连接后操作]</string>
    <string name="msg_editaddress_new_address">[%1$s]地址更改为:</string>
    <string name="title_editdeviceid_new_deviceid">修改DeviceID[断开设备连接后操作]</string>
    <string name="msg_editdeviceid_new_deviceid">DeviceID更改为:</string>
    <string name="title_editslaveid_new_slaveid">修改SlaveID[断开设备连接后操作]</string>
    <string name="msg_editslaveid_new_slaveid">SlaveID更改为:</string>
    <string name="title_editip_new_ip">修改IPAddress[断开设备连接后操作]</string>
    <string name="msg_editip_new_ip">IPAddress更改为:</string>
    <string name="title_editport_new_port">修改PortNumber[断开设备连接后操作]</string>
    <string name="msg_editport_new_port">PortNumber更改为:</string>
    <string name="title_writetag_new_value">更改点值</string>
    <string name="msg_editWriteMinInterval_new_interval">最小写间隔更改为(毫秒):</string>
    <string name="title_editWriteMinInterval_new_interval">更改最小写间隔</string>
    <string name="msg_writetag_new_value">点[%1$s]地址[%2$s]类型[%3$s]更改值为:</string>

    <!--title bar -->
    <string name="top_navigation_title_wifi">网络</string>
    <string name="top_navigation_title_moniter">监控</string>
    <string name="top_navigation_title_options">选项</string>
    <string name="top_navigation_title_workorder">派工单</string>
    <string name="top_navigation_title_device_location_map">地理位置[%1$s]</string>

    <!--wifi-->
    <string name="wifi_connected_hint">已连接至[%1$s]</string>

    <!---->
    <string name="hint_nopermission_cannot_savetogallery">权限不足，无法保存图表</string>
    <string name="savetogallery_success">保存成功</string>
    <string name="savetogallery_failed">保存失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--图表相关格式化html字符串-->
    <string name="chartmarker_normal_single_item_parthtml"><![CDATA[
    <br>%1$s
]]></string>
    <string name="chartmarker_warning_single_item_parthtml"><![CDATA[
    <br><font color=\'#%1$s\'>%2$s[%3$s]</font>
]]></string>
    <string name="chartmarker_normal_stack_item_parthtml"><![CDATA[
    <br>%1$s:%2$s
]]></string>
    <string name="chartmarker_stack_warning_item_parthtml"><![CDATA[
    <br><font color=\'#%1$s\'>%2$s:%3$s[%4$s]</font>
]]></string>
    <string name="title_activity_login">用户登陆</string>
    <string name="hint_intput_login_username">用  户  名</string>
    <string name="hint_intput_login_pwd">登陆密码</string>
    <string name="text_btn_login_att">登        陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
